k8s/resources/openwebui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: openwebui
  labels:
    app: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      containers:
      - name: openwebui
        image: ghcr.io/open-webui/open-webui:v0.6.36
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: frontend
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "5Gi"
        volumeMounts:
        - name: openwebui-data
          mountPath: /app/backend/data
          readOnly: false
          subPath: openwebui
      volumes:
      - name: openwebui-data
        persistentVolumeClaim:
          claimName: openwebui-data
