k8s/resources/openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
spec:
  ports:
    - name: frontend
      port: 80
      targetPort: frontend
  selector:
    app: openwebui
  type: LoadBalancer
