k8s/resources/openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  namespace: openwebui
spec:
  rules:
  - host: "openwebui.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: openwebui
            port:
              number: 80
